updated prices and policy

--- a/in/contact/index.html
+++ b/in/contact/index.html
@@ -25,7 +25,7 @@
             <div class="bg-grays-175" data-include="/src/sections/navigation.html"></div>
         </header>
         <main class="flex flex-col">
-            <div class="" data-include="/src/sections/hero-sec.html"></div>
+            <div class="" data-include="/src/sections/contactUs.html"></div>
         </main>
         <footer class="flex flex-col">
             <div class="bg-grays-0" data-include="/src/sections/footer.html"></div>
