--- a/src/sections/L1sec5-breakdown.html
+++ b/src/sections/L1sec5-breakdown.html
@@ -14,7 +14,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #1</p>
                             <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Services and Pricing Portfolio</h3>
-                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 30€</div>
+                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 60€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
                             <div class="self-stretch justify-start items-center gap-3 inline-flex lg:gap-6">
@@ -40,7 +40,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #2</p>
                             <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Client Proposal</h3>
-                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 30€</div>
+                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 25€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
                             <div class="self-stretch justify-start items-center gap-3 inline-flex lg:gap-6">
@@ -66,7 +66,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #3</p>
                             <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">New Client Questionnaire</h3>
-                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 30€</div>
+                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 20€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
                             <div class="self-stretch justify-start items-center gap-3 inline-flex lg:gap-6">
@@ -88,11 +88,17 @@
                     </div>
                 </div>
             </div>
-            <div class="self-stretch flex-col justify-start items-center flex">
-                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
-                    <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+            <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
+                <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                    <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
+                    <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                 </div>
-                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                <div class="self-stretch flex-col justify-start items-center flex">
+                    <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
+                        <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                    </div>
+                    <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                </div>
             </div>
             <div class="self-stretch flex-col justify-start items-start gap-8 flex">
                 <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
@@ -100,7 +106,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #4</p>
                             <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Social Media Strategy</h3>
-                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 30€</div>
+                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 70€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
                             <div class="self-stretch justify-start items-center gap-3 inline-flex lg:gap-6">
@@ -126,7 +132,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #5</p>
                             <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Contract de Prestare de Servicii</h3>
-                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 30€</div>
+                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 35€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                             <div class="self-stretch justify-start items-center gap-3 inline-flex lg:gap-6">
@@ -152,7 +158,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #6</p>
                             <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Email Templates for SMM</h3>
-                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 30€</div>
+                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 25€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
                             <div class="self-stretch justify-start items-center gap-3 inline-flex lg:gap-6">
@@ -178,7 +184,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #7</p>
                             <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Your 8 Step Discovery Call Checklist</h3>
-                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 30€</div>
+                            <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 10€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
                             <div class="self-stretch justify-start items-center gap-3 inline-flex lg:gap-6">
@@ -200,11 +206,17 @@
                     </div>
                 </div>
             </div>
-            <div class="self-stretch flex-col justify-start items-center flex">
-                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
-                    <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr"class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+            <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
+                <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                    <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
+                    <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                 </div>
-                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                <div class="self-stretch flex-col justify-start items-center flex">
+                    <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
+                        <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                    </div>
+                    <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                </div>
             </div>
         </div>
     </div>
