--- a/src/sections/L1sec6-bonuses.html
+++ b/src/sections/L1sec6-bonuses.html
@@ -20,7 +20,7 @@
                 <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden lg:hidden">
                     <lottie-player class="origin-top-left w-full h-auto" src="https://cdn.lottielab.com/l/7pSBq27oeaVBMS.json" loop autoplay></lottie-player>
                 </div>
-                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 lg:flex overflow-hidden hidden lg:gap-2">
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 lg:flex overflow-hidden hidden lg:gap-4">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Ofertă limitată:</h4>
@@ -44,11 +44,17 @@
                         </div>
                     </div>
                     <p class="self-stretch text-grays-1000 text-sm font-normal lg:hidden">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
-                    <div class="self-stretch flex-col justify-start items-center flex">
-                        <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                            <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                    <div class="self-stretch rounded-lg flex-col justify-center items-center gap-0 flex">
+                        <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                            <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
+                            <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                         </div>
-                        <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                        <div class="self-stretch flex-col justify-start items-center flex">
+                            <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                                <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                            </div>
+                            <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -76,11 +82,17 @@
                     </div>
                 </div>
                 <p class="self-stretch text-grays-1000 text-sm font-normal ">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
-                <div class="self-stretch flex-col justify-start items-center flex">
-                    <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                        <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                <div class="self-stretch rounded-lg flex-col justify-center items-center gap-0 flex">
+                    <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                        <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
+                        <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                     </div>
-                    <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                    <div class="self-stretch flex-col justify-start items-center flex">
+                        <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                            <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                        </div>
+                        <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                    </div>
                 </div>
             </div>
             <div class="rounded-2xl justify-center items-center lg:inline-flex overflow-hidden hidden">
@@ -94,7 +106,7 @@
                     <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                         <h5 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #2</h5>
                         <h3 class="self-stretch text-center lg:text-3xl md:max-lg:text-3xl "><span class="text-grays-1000 text-2xl font-medium ">Ghidul </span><span class="text-red-850 text-2xl font-medium ">„Cum să te pregătești pentru un apel de succes”</span></h3>
-                        <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium lg:text-xl md:max-lg:text-xl">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through lg:text-xl md:max-lg:text-xl">30€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic lg:text-xl md:max-lg:text-xl">GRATIS</span></div>
+                        <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium lg:text-xl md:max-lg:text-xl">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through lg:text-xl md:max-lg:text-xl">24€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic lg:text-xl md:max-lg:text-xl">GRATIS</span></div>
                     </div>
                     <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Un apel de descoperire bine pregătit îți poate aduce clienți pe termen lung. Acest ghid îți arată exact ce trebuie să spui și cum să structurezi apelurile pentru a obține colaborări sigure și profitabile.</div>
                 </div>
@@ -102,11 +114,17 @@
                     <img class="origin-top-left w-full " src="/src/assets/images/products/BonusFreeGuide.png" />
                 </div>
             </div>
-            <div class="self-stretch flex-col justify-start items-center flex">
-                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
-                    <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+            <div class="self-stretch rounded-lg flex-col justify-center items-center gap-0 flex">
+                <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                    <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
+                    <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                 </div>
-                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                <div class="self-stretch flex-col justify-start items-center flex">
+                    <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
+                        <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                    </div>
+                    <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                </div>
             </div>
         </div>
     </div>
