--- a/src/sections/L1sec8-mainCTA.html
+++ b/src/sections/L1sec8-mainCTA.html
@@ -44,7 +44,7 @@
                             <div class="self-stretch flex-row justify-start items-center gap-2 flex ">
                                 <h3 class="self-stretch  text-grays-1000 text-xl font-bold font-serif leading-9">Preț:</h3>
                                 <h4 class="self-stretch text-grays-600 text-xl font-normal line-through leading-10">245€</h4>
-                                <h3 class="self-stretch text-center text-red-650 text-3xl font-bold font-serif leading-6">45€</h3>
+                                <h3 class="self-stretch text-center text-red-650 text-3xl font-bold font-serif leading-6">24.98€</h3>
                             </div>
                             <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Un sistem complet care îți oferă documente profesionale, ghiduri esențiale și strategii testate, astfel încât să începi rapid și fără stres.</div>
                         </div>
@@ -143,7 +143,7 @@
                         <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
                             <div class="self-stretch flex-col justify-center items-start gap-1 flex">
                                 <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
-                                <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">45€</span></div>
+                                <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                             </div>
                             <div class="self-stretch flex-col justify-start items-center flex">
                                 <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
@@ -196,11 +196,17 @@
                                 </div>
                             </div>
                             <p class="self-stretch text-grays-1000 text-sm font-normal lg:hidden">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
-                            <div class="self-stretch flex-col justify-start items-center flex">
-                                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                                    <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                            <div class="self-stretch rounded-lg flex-col justify-center items-center gap-0 flex">
+                                <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                                    <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
+                                    <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                                 </div>
-                                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                                <div class="self-stretch flex-col justify-start items-center flex">
+                                    <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                                        <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                                    </div>
+                                    <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -228,11 +234,17 @@
                             </div>
                         </div>
                         <p class="self-stretch text-grays-1000 text-sm font-normal ">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
-                        <div class="self-stretch flex-col justify-start items-center flex">
-                            <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                                <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                        <div class="self-stretch rounded-lg flex-col justify-center items-center gap-0 flex">
+                            <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                                <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
+                                <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                             </div>
-                            <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                            <div class="self-stretch flex-col justify-start items-center flex">
+                                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                                    <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                                </div>
+                                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="rounded-2xl justify-center items-center lg:inline-flex overflow-hidden hidden">
@@ -247,7 +259,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <h5 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #2</h5>
                             <h3 class="self-stretch text-center lg:text-3xl md:max-lg:text-3xl "><span class="text-grays-1000 text-2xl font-medium ">Ghidul </span><span class="text-red-850 text-2xl font-medium ">„Cum să te pregătești pentru un apel de succes”</span></h3>
-                            <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium lg:text-xl md:max-lg:text-xl">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through lg:text-xl md:max-lg:text-xl">30€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic lg:text-xl md:max-lg:text-xl">GRATIS</span></div>
+                            <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium lg:text-xl md:max-lg:text-xl">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through lg:text-xl md:max-lg:text-xl">24€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic lg:text-xl md:max-lg:text-xl">GRATIS</span></div>
                         </div>
                         <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Un apel de descoperire bine pregătit îți poate aduce clienți pe termen lung. Acest ghid îți arată exact ce trebuie să spui și cum să structurezi apelurile pentru a obține colaborări sigure și profitabile.</div>
                     </div>
@@ -255,10 +267,10 @@
                         <img class="origin-top-left w-full " src="/src/assets/images/products/BonusFreeGuide.png" />
                     </div>
                 </div>
-                <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
+                <div class="self-stretch rounded-lg flex-col justify-center items-center gap-0 flex">
                     <div class="self-stretch flex-col justify-center items-start gap-1 flex">
                         <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
-                        <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">45€</span></div>
+                        <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                     </div>
                     <div class="self-stretch flex-col justify-start items-center flex">
                         <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
