--- a/src/sections/navigation.html
+++ b/src/sections/navigation.html
@@ -6,7 +6,7 @@
     </div>
     <div class="hidden lg:inline-flex gap-6">
         <a href="https://shop.sipunct.com/b/toolkit-start-rapid-in-social-media" class="self-stretch text-center text-grays-900 text-lg font-normal hover:underline">SMM Kit</a>
-        <!-- <a href="https://shop.sipunct.com/b/toolkit-start-rapid-in-social-media" class="self-stretch text-center text-grays-900 text-lg font-normal hover:underline">Despre</a> -->
+        <!-- <a href="/in/about/" class="self-stretch text-center text-grays-900 text-lg font-normal hover:underline">Despre</a> -->
         <a href="/in/ghid-gratuit/" class="self-stretch text-center text-grays-900 text-lg font-normal hover:underline">Ghid Gratuit</a>
     </div>
     <div class="rounded-lg border-2 border-grays-700 justify-center items-center gap-2 flex hover:border-red-650 hover:bg-grays-0">
