--- a/src/sections/privacyPolicy.html
+++ b/src/sections/privacyPolicy.html
@@ -6,20 +6,58 @@
                     Politica de Confidențialitate – SiPunct Media
                 </h2>
                 <div class="self-stretch text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl">
-                    Actualizat: 15.02.2025
+                    Actualizat: 13.02.2025
                 </div>
             </div>
             <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                Protejăm confidențialitatea și datele personale ale utilizatorilor noștri. Această politică explică ce date colectăm, cum le folosim și cum le protejăm.
+                Confidențialitatea ta este importantă pentru noi. Această politică explică ce date colectăm, cum le folosim și cum le protejăm atunci când utilizezi site-ul nostru sipunct.com. 
+            </p>
+            <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                Prin accesarea și utilizarea site-ului nostru, ești de acord cu practicile descrise în această politică.
             </p>
             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                 <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                     <h3 class="self-stretch text-grays-900 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">
-                        1. Ce date colectăm?
+                        1. Ce date colectăm și cum le colectăm?
                     </h3>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                        Atunci când utilizezi site-ul nostru sau achiziționezi un produs, putem colecta următoarele date:
+                        Colectăm date în următoarele moduri:
                     </p>
+                    <ol>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Când te înscrii pentru a primi un ghid gratuit, newsletter sau oferte speciale
+                        </li>
+                        <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
+                            <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                                Nume
+                            </li>
+                            <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                                Adresă de e-mail
+                            </li>
+                        </ul>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Când achiziționezi un produs digital
+                        </li>
+                        <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
+                            <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                                Nume și e-mail (pentru livrare și confirmare comandă)
+                            </li>
+                            <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                                Date de plată (procesate de terți securizați precum Payhip, Stripe, PayPal – noi nu stocăm aceste date)
+                            </li>
+                        </ul>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Prin cookie-uri și tehnologii de tracking
+                        </li>
+                        <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
+                            <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                                Date despre comportamentul tău pe site (pagini vizitate, timpul petrecut pe pagină, linkuri accesate)
+                            </li>
+                            <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                                Informații despre dispozitivul și browserul tău
+                            </li>
+                        </ul>
+                    </ol>
                     <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
                             Nume și adresă de e-mail (pentru livrarea produselor și e-mail marketing).
@@ -37,21 +75,24 @@
                         2. Cum folosim datele tale?
                     </h3>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                        Folosim datele colectate pentru:
+                        Folosim datele tale în următoarele scopuri:
                     </p>
                     <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            A livra produsele digitale pe care le achiziționezi.
+                            Pentru a-ți livra produsele digitale (prin e-mail sau printr-un link de descărcare).
                         </li>
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            A-ți trimite e-mailuri cu actualizări, oferte și conținut relevant (doar dacă ai optat pentru asta).
+                            Pentru a-ți trimite actualizări și oferte (doar dacă ai optat pentru asta).
                         </li>
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            A îmbunătăți experiența pe site prin analizarea comportamentului utilizatorilor.
+                            Pentru a îmbunătăți experiența utilizatorilor (analizând comportamentul pe site și optimizând conținutul nostru).
+                        </li>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Pentru campanii publicitare personalizate (folosind Meta Pixel și Google Analytics).
                         </li>
                     </ul>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                        Nu vindem și nu distribuim datele tale către terți.
+                        Nu vindem și nu partajăm datele tale personale cu terți pentru scopuri comerciale.
                     </p>
                 </div>
                 <div class="self-stretch flex-col justify-start items-start gap-4 flex">
@@ -59,17 +100,17 @@
                         3. Cum protejăm datele tale?
                     </h3>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                        Utilizăm măsuri de securitate avansate pentru a proteja informațiile tale. De asemenea, folosim doar platforme sigure precum:
+                        Utilizăm măsuri de securitate avansate pentru a proteja informațiile tale. Utilizăm măsuri de securitate avansate:
                     </p>
                     <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            Google Analytics – pentru analiza traficului.
+                            Conexiune SSL criptată pentru protecția datelor transmise prin site.
                         </li>
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            Meta Pixel – pentru a optimiza reclamele și campaniile de marketing.
+                            Stocare sigură a informațiilor prin platforme de încredere (Payhip, Stripe, PayPal, MailerLite).
                         </li>
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            MailerLite – pentru gestionarea listelor de e-mail și trimiterea de newslettere.
+                            Acces limitat la datele utilizatorilor – doar personalul autorizat are acces.
                         </li>
                     </ul>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
@@ -81,25 +122,51 @@
                         4. Cookie-uri și tehnologii de tracking
                     </h3>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                        Folosim cookie-uri pentru a îmbunătăți experiența pe site. Prin continuarea navigării, ești de acord cu utilizarea acestora.
+                        Ce sunt cookie-urile?
+                    </p>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Cookie-urile sunt fișiere mici care stochează informații despre activitatea ta pe site și ne ajută să îmbunătățim experiența utilizatorilor.
+                    </p>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Ce cookie-uri folosim?
+                    </p>
+                    <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Esențiale – necesare pentru funcționarea site-ului.
+                        </li>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Analitice – colectează date anonime despre utilizarea site-ului (Google Analytics).
+                        </li>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Marketing – ne ajută să personalizăm reclamele (Meta Pixel).
+                        </li>
+                    </ul>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Cum poți controla cookie-urile?
+                    </p>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Poți dezactiva cookie-urile din setările browserului tău, însă acest lucru poate afecta funcționalitatea site-ului.
                     </p>
                 </div>
                 <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                     <h3 class="self-stretch text-grays-900 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">
-                        5. Drepturile tale
+                        5. Servicii terțe pe care le folosim
                     </h3>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                        Ai dreptul să:
+                        Utilizăm următoarele platforme pentru colectarea și procesarea datelor:
                     </p>
                     <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            Soliciți acces la datele tale.
+                            Google Analytics – pentru analiza traficului pe site.
                         </li>
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            Ceri ștergerea sau modificarea datelor.
+                            Meta Pixel (Facebook Ads & Instagram Ads) – pentru campanii publicitare personalizate.
                         </li>
                         <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                            Te dezabonezi de la e-mailuri în orice moment.
+                            MailerLite – pentru gestionarea newsletterelor și e-mailurilor.
+                        </li>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Payhip / Stripe / PayPal – pentru procesarea plăților securizate.
                         </li>
                     </ul>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
@@ -108,13 +175,52 @@
                 </div>
                 <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                     <h3 class="self-stretch text-grays-900 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">
-                        Modificări ale politicii:
+                        6. Drepturile tale asupra datelor
+                    </h3>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Ai dreptul să:
+                    </p>
+                    <ul class="self-stretch flex-col justify-start items-start gap-2 flex">
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Soliciți acces la datele tale – Poți cere să vezi ce date avem despre tine.
+                        </li>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Ceri ștergerea sau modificarea datelor – Poți solicita ștergerea contului sau modificarea informațiilor personale.
+                        </li>
+                        <li class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                            Te dezabonezi de la e-mailuri oricând (fie prin linkul „Dezabonare” din e-mail, fie printr-o solicitare către noi).
+                        </li>
+                    </ul>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Pentru orice solicitare, trimite un e-mail la contact@sipunct.com.
+                    </p>
+                </div>
+                <div class="self-stretch flex-col justify-start items-start gap-4 flex">
+                    <h3 class="self-stretch text-grays-900 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">
+                        8. Modificări ale politicii:
                     </h3>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
                         Ne rezervăm dreptul de a modifica această politică de confidențialitate în orice moment.
                     </p>
                     <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
-                        Mulțumim că ai ales SiPunct Media!
+                        Orice actualizare va fi publicată pe această pagină, iar utilizarea în continuare a site-ului va reprezenta acceptul tău pentru noile condiții.
+                    </p>
+                </div>
+                <div class="self-stretch flex-col justify-start items-start gap-4 flex">
+                    <h3 class="self-stretch text-grays-900 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">
+                        9. Contact
+                    </h3>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Dacă ai întrebări despre această politică sau vrei să soliciți modificarea datelor tale, ne poți contacta la:
+                    </p>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Email: contact@sipunct.com
+                    </p>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Website: wwww.sipunct.com
+                    </p>
+                    <p class="self-stretch text-grays-950 text-lg font-normal lg:text-xl md:max-lg:text-xl">
+                        Mulțumim că ai ales Si Punct Media!
                     </p>
                 </div>
             </div>
