--- a/src/sections/L1sec4-intro.html
+++ b/src/sections/L1sec4-intro.html
@@ -12,7 +12,7 @@
                 <div class="relative rounded-2xl lg:basis-auto ">
                     <img src="/src/assets/images/[1x1]-redBG-nTv1-site&socials@1.5x.png" alt="placeholder image">
                 </div>
-                <div class="self-stretch flex-col justify-start items-start gap-2 flex lg:basis-3/5">
+                <div class="self-stretch flex-col justify-start items-start gap-4 flex lg:basis-3/5">
                     <div class="self-stretch px-4 py-6 bg-grays-0 rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden">
                         <h3 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">În mai puțin de o oră...</h3>
                         <div class="self-stretch justify-start items-center gap-4 inline-flex">
@@ -32,11 +32,17 @@
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei avea control complet — nu vei mai simți confuzie sau stres, ci vei ști exact ce pași să urmezi pentru succes.</p>
                         </div>
                     </div>
-                    <div class="self-stretch flex-col justify-start items-center flex">
-                        <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                            <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                    <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
+                        <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                            <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
+                            <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">24.98€</span></div>
                         </div>
-                        <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                        <div class="self-stretch flex-col justify-start items-center flex">
+                            <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                                <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                            </div>
+                            <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                        </div>
                     </div>
                 </div>
             </div>
