--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -6,7 +6,7 @@
                 <a href="/" class="self-stretch text-center text-black text-lg font-normal ">Home</a>
                 <a href="/in/ghid-gratuit/" class="self-stretch text-center text-black text-lg font-normal ">Ghid Gratuit!</a>
                 <!-- <a href="" class="self-stretch text-center text-black text-lg font-normal ">Despre noi</a> -->
-                <!--<a href="" class="self-stretch text-center text-black text-lg font-normal ">Contactează-ne</a> -->
+                <a href="/in/contact/" class="self-stretch text-center text-black text-lg font-normal ">Contactează-ne</a>
                 <a href="https://shop.sipunct.com/b/toolkit-start-rapid-in-social-media" class="self-stretch text-center text-black text-lg font-normal ">SMM Kit</a>
             </div>
             <div class="self-stretch justify-center items-start gap-3 inline-flex">
